# colony

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  index.html  mkdocs.yml  seed_data.yaml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
architecture/activity-log/: index.html
architecture/api-specification/: index.html
architecture/backend/: index.html
architecture/database-schema/: index.html
architecture/deployment/: index.html
architecture/frontend/: index.html
backend/: AGENTS.md  Dockerfile  alembic.ini  create_tables.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_schema.py  0002_add_activity_log_and_comments.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py
backend/app/activity/: constants.py  dependencies.py  exceptions.py  helpers.py  models.py  router.py  schemas.py  service.py
backend/app/auth/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/app/cycles/: constants.py  dependencies.py  exceptions.py  exchange_rates_router.py  models.py  router.py  schemas.py  service.py  utils.py
backend/app/expense_templates/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/households/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/internal/: admin.py
backend/app/payment_methods/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/recurrent_expenses/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/recurrent_incomes/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/routers/: items.py  users.py
backend/scripts/: create_tables.py  migrate_add_expense_category_extra.sql  migrate_add_expense_statuses.sql  migrate_add_last_4_digits_to_payment_methods.sql  run_migrations.py  seed_db.py
backend/tests/: conftest.py
backend/tests/activity/: conftest.py  test_router.py  test_service.py
backend/tests/cycles/: conftest.py  test_summary.py
backend/tests/expense_templates/: conftest.py  test_router.py  test_schemas.py  test_service.py
backend/tests/households/: conftest.py  test_router.py
backend/tests/recurrent_expenses/: conftest.py  test_router.py  test_schemas.py  test_service.py
development/: index.html
development/code-quality/: index.html
development/database-backups/: index.html
development/database-schema/: index.html
development/deployment/: index.html
development/migrations/: index.html
development/setup/: index.html
docs/: index.md  requirements.md  roadmap.md  use-cases.md
docs/architecture/: activity-log.md  api-specification.md  backend.md  database-schema.md  deployment.md  frontend.md
docs/development/: code-quality.md  database-backups.md  database-schema.md  deployment.md  index.md  migrations.md  setup.md
frontend/: AGENTS.md  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json  proxy.ts
requirements/: index.html
roadmap/: index.html
scripts/: backup-db.sh  restore-db.sh
search/: search_index.json
stylesheets/: notebook.css
use-cases/: index.html
(+105 files in other folders)
